# restate-sdk-rust

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
client/: Cargo.toml
core/: Cargo.toml
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/discovery/: Cargo.toml  build.rs
crates/discovery/service-protocol/: endpoint_manifest_schema.json
crates/openapi/: Cargo.toml  README.md  justfile
crates/openapi/.openapi-generator/: FILES
crates/openapi/docs/: CreateSubscriptionRequest.md  DeletionMode.md  DeploymentApi.md  DeploymentResponse.md  DeploymentResponseAnyOf.md  DeploymentResponseAnyOf1.md  DetailedDeploymentResponse.md  DetailedDeploymentResponseAnyOf.md  DetailedDeploymentResponseAnyOf1.md  ErrorDescriptionResponse.md  HandlerMetadata.md  HandlerMetadataType.md  HealthApi.md  InvocationApi.md  ListDeploymentsResponse.md  ListServiceHandlersResponse.md  ListServicesResponse.md  ListSubscriptionsResponse.md  ModifyServiceRequest.md  ModifyServiceStateRequest.md  OpenapiApi.md  ProtocolType.md  RegisterDeploymentRequest.md  RegisterDeploymentRequestAnyOf.md  RegisterDeploymentRequestAnyOf1.md  RegisterDeploymentResponse.md  ServiceApi.md  ServiceHandlerApi.md  ServiceMetadata.md  ServiceNameRevPair.md  ServiceType.md  SubscriptionApi.md  SubscriptionResponse.md  TerminationMode.md  VersionApi.md  VersionInformation.md
crates/openapi/examples/: client.rs
crates/openapi/spec/: openapi.json  restate.yaml
crates/openapi/src/apis/: configuration.rs  deployment_api.rs  health_api.rs  invocation_api.rs  mod.rs  openapi_api.rs  service_api.rs  service_handler_api.rs  subscription_api.rs  version_api.rs
crates/openapi/src/models/: create_subscription_request.rs  deletion_mode.rs  deployment_response.rs  deployment_response_any_of.rs  deployment_response_any_of_1.rs  detailed_deployment_response.rs  detailed_deployment_response_any_of.rs  detailed_deployment_response_any_of_1.rs  error_description_response.rs  handler_metadata.rs  handler_metadata_type.rs  list_deployments_response.rs  list_service_handlers_response.rs  list_services_response.rs  list_subscriptions_response.rs  mod.rs  modify_service_request.rs  modify_service_state_request.rs  protocol_type.rs  register_deployment_request.rs  register_deployment_request_any_of.rs  register_deployment_request_any_of_1.rs  register_deployment_response.rs  service_metadata.rs  service_name_rev_pair.rs  service_type.rs  subscription_response.rs  termination_mode.rs  version_information.rs
crates/sdk/: Cargo.toml  README.md
crates/sdk/src/: combinators.rs  connection.rs  context.rs  endpoint.rs  invocation.rs  journal.rs  lib.rs  logger.rs  machine.rs  protocol.rs  store.rs  syscall.rs
crates/sdk/src/endpoint/: handler.rs  http2_handler.rs  mod.rs  service.rs
crates/sdk/src/message/: encoding.rs  header.rs  mod.rs
crates/sdk/src/utils/: base64.rs
crates/service-protocol/: Cargo.toml
crates/service-protocol/src/: codec.rs
crates/service-protocol/src/message/: encoding.rs  header.rs  mod.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs
crates/types/: Cargo.toml  build.rs
crates/types/proto/dev/restate/service/: rust.proto
crates/types/src/: errors.rs  identifiers.rs  invocation.rs  lib.rs  protocol.rs  service_protocol.rs  time.rs
crates/types/src/journal/: entries.rs  mod.rs  raw.rs
crates/utils/: Cargo.toml  README.md
crates/utils/src/: lib.rs
derive/src/: lib.rs
discovery/: build.rs
discovery/src/: lib.rs
examples/: Cargo.toml
examples/discovery/: manifest.json
examples/src/: _example.rs  combinator.rs  example.rs  example0.rs  example1.rs  example2.rs  example3.rs  example4.rs  example5.rs  object.rs  timeout.rs  workflow.rs
proto/: Cargo.toml  build.rs
sdk/: Cargo.toml
sdk/src/: connection.rs  context.rs  endpoint.rs  invocation.rs  io.rs  journal.rs  logger.rs  machine.rs  store.rs  syscall.rs
service-protocol/: Cargo.toml  build.rs
service-protocol/src/: lib.rs
test-utils/: Cargo.toml
types/: Cargo.toml
types/src/: lib.rs  protocol.rs
