[workspace]
members = [
    "crates/api",
    "crates/client",
    "crates/core",
    "crates/derive",
    "crates/sdk",
    "crates/service-protocol",
    "crates/test-utils",
    "crates/types",
    "examples"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["restate.dev"]
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/restatedev/sdk-rust"
description = "Restate Rust SDK"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
bytes = { version = "1.6", features = ["serde"] }
bytes-utils = "0.1.4"
bytestring = { version = "1.3", features = ["serde"] }
dashmap = "5.5.3"
derive_builder = "0.20.0"
derive_more = "0.99"
derive-new = "0.6.0"
futures = "0.3"
futures-util = "0.3"
h2 = "0.4.4"
http = "1.0"
http-body = "1.0"
http-body-util = "0.1"
hyper = "1.3.1"
hyper-util = "0.1.3"
itertools = "0.13.0"
opentelemetry = { version = "0.23.0", features = ["trace"] }
parking_lot = { version = "0.12" }
pin-project-lite = "0.2.14"
prost = "0.12"
prost-types = "0.12"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0"
time = "0.3.36"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["full"] }
tokio-test = { version = "0.4.4" }
tracing = "0.1"
tracing-futures = "0.2"
tracing-opentelemetry = "0.23.0"
url = "2.5.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
missing_docs = "warn"

[profile.release]
strip = true
incremental = true
panic = "abort"
