[package]
name = "restate-sdk-client"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = { workspace = true }

[features]
default = []

[dependencies]
anyhow = "1.0"
derive_builder = "0.20.0"
derive_more = "0.99"
derive-new = "0.6.0"
futures = "0.3"
futures-util = "0.3"
opentelemetry = { version = "0.23.0", features = ["trace"] }
prost = "0.12"
prost-types = "0.12"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"
time = "0.3.36"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["full"] }
tokio-test = { version = "0.4.4"}
tracing = "0.1"
tracing-futures = "0.2"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3", features = ["parking_lot", "env-filter", "registry"] }

[dev-dependencies]
mockall = "0.12"