[package]
name = "restate-sdk-examples"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = { workspace = true }

[[example]]
doc = false
name = "example"
path = "src/example.rs"
required-features = []

[features]
default = []

[dependencies]
anyhow = { workspace = true }
restate-sdk = { version = "0.1.0", path = "../crates/sdk" }
restate-sdk-types = { version = "0.1.0", path = "../crates/types" }
restate-service-protocol = { version = "0.1.0", path = "../crates/service-protocol" }
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }
tracing-futures = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["parking_lot", "env-filter", "registry"] }
