[package]
name = "restate-sdk-examples"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = { workspace = true }

[[example]]
doc = false
name = "example"
path = "src/example.rs"
required-features = []

[[example]]
doc = false
name = "example0"
path = "src/example0.rs"
required-features = []

[[example]]
doc = false
name = "example1"
path = "src/example1.rs"
required-features = []

[[example]]
doc = false
name = "example2"
path = "src/example2.rs"
required-features = []

[features]
default = []

[dependencies]
anyhow = { workspace = true }
restate = { version = "0.1.0", path = "../crates/api" }
serde = { workspace = true }
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["parking_lot", "env-filter", "registry"] }
