[package]
name = "restate-sdk-service-protocol"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = { workspace = true }

[features]
default = []

[dependencies]
anyhow = "1.0"
prost = "0.12.6"
prost-types = "0.12.6"
strum = "0.26.2"
strum_macros = "0.26.2"

[dev-dependencies]
mockall = "0.12"

[build-dependencies]
prost-build = "0.12.6"
