[package]
name = "restate-sdk-types"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = { workspace = true }

[features]
default = []

[dependencies]
anyhow = "1.0"
restate-sdk-service-protocol = { version = "0.1.0", path = "../service-protocol" }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = { version = "1.0.117" }
