[package]
name = "restate"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = { workspace = true }

[features]
default = []
tokio = []

[dependencies]
anyhow = { workspace = true }
async-recursion = { version = "1.1.1" }
bytes = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
restate-sdk = { version = "0.1.0", path = "../sdk" }
restate-sdk-client = { version = "0.1.0", path = "../client" }
restate-sdk-core = { version = "0.1.0", path = "../core" }
restate-sdk-derive = { version = "0.1.0", path = "../derive" }
