[package]
name = "restate-sdk-derive"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = { workspace = true }

[lib]
proc-macro = true

[dependencies]
darling =  { version = "0.20.9" }
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
restate-sdk-core = { version = "0.1.0", path = "../core" }
serde = { version = "1.0", features = ["derive"] }
syn = { version = "2.0" }
thiserror = { version = "1.0" }

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
