[package]
name = "restate-sdk-derive"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = { workspace = true }

[lib]
proc-macro = true

[dependencies]
convert_case = { version = "0.6.0" }
darling =  { version = "0.20.10" }
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
restate-sdk-core = { version = "0.1.0", path = "../core" }
restate-sdk-types = { version = "0.1.0", path = "../types" }
serde = { workspace = true }
serde_json = { workspace = true }
syn = { version = "2.0" }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
