[package]
name = "restate-sdk-discovery-types"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = { workspace = true }

[features]
default = []

[dependencies]
regress = "0.9.1"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = { version = "1.0.117" }

[build-dependencies]
jsonptr = "0.4.7"
prettyplease = { version = "0.2.20" }
serde_json = { version = "1.0.117" }
syn = { version = "2.0.65" }
typify = { version = "0.1.0" }
