[package]
name = "restate-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = { workspace = true }

[features]
default = []
tokio = []

[dependencies]
anyhow = "1.0"
async-trait = "0.1.80"
bytes = "1.6.0"
bytes-utils = "0.1.4"
bytestring = "1.3.1"
dashmap = "5.5.3"
derive-new = "0.6.0"
derive_builder = "0.20.0"
derive_more = "0.99"
futures = "0.3"
futures-util = "0.3"
http = "1.0"
http-body = "1.0"
http-body-util = "0.1"
hyper = { version = "1", features = ["server"] }
hyper-util = { version = "0.1", features = ["http1", "http2", "server", "tokio"] }
itertools = "0.13.0"
opentelemetry = { version = "0.23.0", features = ["trace"] }
parking_lot = { version = "0.12" }
pin-project-lite = "0.2.14"
prost = "0.12"
prost-types = "0.12"
rand = "0.8.5"
restate-sdk-types = { version = "0.1.0", path = "../types" }
restate-service-protocol = { version = "0.1.0", path = "../service-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"
size = "0.4.1"
thiserror = "1.0"
time = "0.3.36"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.15"
tokio-test = { version = "0.4.4" }
tokio-util = { version = "0.7.11", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["cors", "normalize-path"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3", features = ["parking_lot", "env-filter", "registry"] }
url = "2.5.0"
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
futures = { workspace = true }
futures-util = { workspace = true }
mockall = "0.12"
pretty_assertions = "1.3"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-test = { version = "0.2.4" }
