[package]
name = "restate-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = { workspace = true }

[features]
default = ["logger"]
tokio = []
logger = ["tracing-subscriber"]

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.80"
base64 = { workspace = true }
bytes = { workspace = true }
bytes-utils = { workspace = true }
bytestring = { workspace = true }
dashmap = "6.0.1"
derive-new = { workspace = true }
derive_builder = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { version = "1", features = ["server"] }
hyper-util = { version = "0.1", features = ["http1", "http2", "server", "tokio"] }
itertools = { workspace = true }
opentelemetry = { version = "0.23.0", features = ["trace"] }
parking_lot = { version = "0.12" }
pin-project-lite = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
restate-sdk-core = { version = "0.1.0", path = "../core" }
restate-sdk-types = { version = "0.1.0", path = "../types" }
restate-service-protocol = { version = "0.1.0", path = "../service-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
size = "0.4.1"
thiserror = { workspace = true }
time = { workspace = true }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.15" }
tokio-util = { version = "0.7.11", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["cors", "normalize-path"] }
tracing = { workspace = true }
tracing-futures = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["registry"], optional = true }
url = { workspace = true }
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
futures = { workspace = true }
futures-util = { workspace = true }
mockall = "0.12"
pretty_assertions = "1.3"
restate-sdk-derive = { version = "0.1.0", path = "../derive" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-test = { version = "0.4.4" }
tracing = { workspace = true }
tracing-test = { version = "0.2.4" }
