[package]
name = "restate-service-protocol"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = { workspace = true }

[features]
default = []

[dependencies]
base64 = "0.22.1"
bytes = "1.6.0"
bytes-utils = "0.1.4"
bytestring = "1.3.1"
itertools = "0.13.0"
paste = "1.0.15"
prost = "0.12"
prost-types = "0.12"
rand = "0.8.5"
restate-sdk-types = { version = "0.1.0", path = "../types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"
size = "0.4.1"
thiserror = "1.0"
time = "0.3.36"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
url = "2.5.0"
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
restate-sdk-types = { version = "0.1.0", path = "../types" }
assert2 = { version = "0.3.14" }
futures = { workspace = true }
futures-util = { workspace = true }
mockall = "0.12"
pretty_assertions = "1.3"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-test = { version = "0.2.4" }
