[package]
name = "restate-service-protocol"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = { workspace = true }

[features]
default = []

[dependencies]
base64 = "0.22.1"
bytes = { workspace = true }
bytes-utils = { workspace = true }
bytestring = { workspace = true }
itertools ={ workspace = true }
paste = "1.0.15"
prost = { workspace = true }
prost-types = { workspace = true }
rand = "0.8.5"
restate-sdk-types = { version = "0.1.0", path = "../types" }
serde = { workspace = true }
serde_json = { workspace = true }
size = "0.4.1"
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
assert2 = { version = "0.3.14" }
futures = { workspace = true }
futures-util = { workspace = true }
mockall = "0.12"
pretty_assertions = "1.4"
restate-sdk-types = { version = "0.1.0", path = "../types" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-test = { version = "0.2.5" }
