[package]
name = "restate-sdk-types"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = { workspace = true }

[features]
default = []

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
bytestring = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
regress = "0.9.1"
serde ={ workspace = true }
serde_json = { workspace = true }
strum = "0.26.2"
strum_macros = "0.26.2"
thiserror = { workspace = true }

[build-dependencies]
jsonptr = "0.4.7"
prettyplease = { version = "0.2.20" }
prost-build = "0.12.6"
serde_json ={ workspace = true }
syn = { version = "2.0.65" }
typify = { version = "0.1.0" }
