[package]
name = "restate-sdk-utils"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = { workspace = true }

[features]
default = []

[dependencies]
anyhow = { workspace = true }
arrow = { version = "51.0.0", features = ["ipc", "prettyprint","json"] }
arrow_convert = { version = "=0.6.6" }
bytes = { workspace = true }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
reqwest = { version = "0.12.5", features = ["json"] }
restate-sdk-types = { version = "0.1.0", path = "../types" }
restate-service-protocol = { version = "0.1.0", path = "../service-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
